--- a/basket/pom.xml
+++ b/basket/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 		<mapstruct.version>1.5.2.Final</mapstruct.version>
+		<resilience.version>1.7.0</resilience.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -108,6 +109,21 @@
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
 			<version>1.3.4</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+			<version>${resilience.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-all</artifactId>
+			<version>${resilience.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-ratelimiter</artifactId>
+			<version>${resilience.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
